Basic GTO insertion (#78)
* Decouple transfer and circularization burns into separate problems

Extract the single-burn transfer logic into a new TransferProblem (and
TransferManeuver) accepting an arbitrary (perigee, apogee) target, so the
existing TransferTwoManeuverProblem becomes a special case targeting a
circular orbit (perigee = apogee = altitude) and adding the analytic
circularization burn on top. This prepares for GEO missions where the
transfer and circularization burns must be staged independently.

* Init GTO mission

* Fix basic GTO mission

---------

Co-authored-by: Claude <noreply@anthropic.com>
Co-authored-by: Okita <okita@shinsengumi.org>